# NaturalLanguageToSQL

./: .env.example  .gitignore  README.md  api.py  demo_company.db  pyproject.toml  react_loop_visualizer.html
agents/: agent_nl_sql_demo.py  agent_react_demo.py  search_agent.py  sql_agent.py
core/: search_agent.py  sql_agent.py
diagrams/: agent_diagrams.drawio  system_design.md
frontend/: README.md
frontend/src/: App.jsx  index.css
notebooks/: 00_tool_calling_live_demo.ipynb  01_tool_calling.ipynb  02_react_from_zero.ipynb  03_react_failure_modes.ipynb  04_react_loop.ipynb  05_react_visualized.ipynb  06_react_vs_native_side_by_side.ipynb
