[project]
name = "aiagent101"
version = "0.1.0"
description = "Natural language to SQL agent powered by LangChain and Groq"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "ipykernel>=7.2.0",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-groq>=0.1",
    "langchain-openai>=0.2",
    "langchainhub>=0.1",
    "openai>=1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=13.0",
    "tiktoken>=0.7",
    "uvicorn>=0.51.0",
]
